--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptates doloribus aperiam dolores, numquam eveniet saepe repellendus vero quaerat inventore soluta, exercitationem autem eaque, necessitatibus dicta hic amet quam facilis?
   </body>
 </html>
